Version 1.0.19:
- Properly mask minus characters in the man page to prevent groff from
  converting them to hyphens. Reported by Emmanuel Bouthenot.
- Handle network share names correctly when creating directories for UIDLS
  files on W32. Bug reported by Dan.
- Handle mail boxes larger than 2 GiB even on 32bit systems. Based on a patch
  by Renato Schmidt. Thanks!

Version 1.0.18:
- Make writing of UIDLS files more robust. Avoid invalid file contents when
  mpop is killed while writing the file.
- Use proper binary prefixes when handling sizes.
- Update gnulib to 2009-09-08. Add modules mkstemp and rename.
- Add support for delivery to MS Exchange pickup directories, based on a patch
  by Julien Larigaldie.
- Use fflush() before fsync(), to ensure that all data reaches the disk.
- Maildir delivery: check for zero-length hostname.

Version 1.0.17:
- Update gnulib to 2009-04-11.
- Update gnulib to 2009-03-07. Remove gnulib modules fseek/fseeko/lseek because
  they cause errors on MinGW: files opened with "r+" cannot be written to.
  Provide our own fseeko instead if it does not exist; see configure.ac.
- Improve test for non-existing UIDLS file.
- Fix an invalid memory access in pop3_retr().
- Document that maildir delivery requires a file system that supports hard 
  links.
- Use more gnulib modules to remove more W32 workarounds from the source.
- Add missing gnulib module strerror for meaningful error messages on W32.

Version 1.0.16:
- Remove most W32-specific code from net.c and use the appropriate gnulib
  modules instead.
- Gnulib upate to 2008-12-24.
- Added a vim syntax file for mpoprc files to scripts/vim. The file was
  originally written by Simon Ruderich for msmtp. Thanks!
- Unified handling of the Gnome and MacOS keyrings. Both are disabled by default
  and must be enabled using --with-*-keyring options.
- From msmtp: Support for SYSCONFDIR/netrc (as a fallback for ~/.netrc) was
  added by Jim Pryor. Thanks!